# ocr-engine

./: .gitignore  .vercelignore  CODEX_BARU_BACA_INI.md  Dockerfile  LANJUT_DI_DEVICE_BARU.md  README.md  package-lock.json  package.json  puppeteer-config.json  pyproject.toml  requirements-agent.txt  run_api.py  vercel.json
api/: health.js
api/ocr/: [...path].js
deploy/: DEPLOY_ALMALINUX.md  docker-compose.yml  ocr-engine.env.example
deploy/nginx/: ocr.automated-underwriting.com.conf
deploy/systemd/: ocr-agent-gateway.service  ocr-engine.service
docs/: mermaid-cli-smoke-test.mmd
docs/superpowers/plans/: 2026-05-15-ocr-ktp-stnk-poc.md
public/: index.html
scripts/: audit_stnk_readiness.py  benchmark_stnk.py  build_postal_code_cache.py  export_frontend.py
src/ocr_engine/: __init__.py  agent_bridge.py  api.py  cli_eval.py  codex_agent_bridge.py  eval_summary.py  frontend.py  image_utils.py  nik_image_fallback.py  pdf_utils.py  pipeline.py  postal_code.py  quality.py  schemas.py  service.py  stnk_usage.py  validators.py
src/ocr_engine/ocr/: __init__.py  base.py  paddle_provider.py  rapid_provider.py
src/ocr_engine/parsers/: common.py  ktp.py  ktp_layout.py  stnk.py
tests/: test_api.py  test_audit_stnk_readiness.py  test_benchmark_stnk.py  test_cli_eval.py  test_eval_summary.py  test_frontend.py  test_image_utils.py  test_input_assessment.py  test_nik_image_fallback.py  test_ocr_provider.py  test_parsers.py  test_pipeline.py  test_quality.py  test_service.py  test_stnk_usage.py
