[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocr-engine-poc"
version = "0.1.0"
description = "Local-only KTP/STNK OCR POC using PaddleOCR and rule-based parsers."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "python-multipart>=0.0.9",
  "pillow>=10.0.0",
  "PyMuPDF>=1.24.0",
  "paddleocr>=3.0.0",
  "paddlepaddle>=3.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
